주석 추가 및 파일 정리

--- a/src/main/resources/templates/ess_page.html
+++ b/src/main/resources/templates/ess_page.html
@@ -221,12 +221,13 @@
 <!-- Custom scripts for all pages-->
 <script src="js/sb-admin-2.min.js"></script>
 
-<!-- Include -->
+<!-- Include(sidebar, navbar include) -->
 <script src="../js/include.js"></script>
-<!-- Clock -->
-<script src="../js/clock.js"></script>
-<script src="../js/scripts.js"></script>
+
+<!-- 데이터 5초마다 갱신 -->
 <script src="../js/sens_data.js"></script>
+
+<!-- 내부 환경 정보 데이터 5초마다 갱신 및 아이콘 색상 변경 스크립트  -->
 <script th:inline="javascript">
 
     function status1() {
